<resources>
    <string name="app_name">Investify</string>
    <string name="investify">Investify</string>
    <string name="amount_you_want_to_invest">Amount you want to invest</string>
    <string name="check_possible_profits">Projected profits</string>
    <string name="estimated_profit">Estimated Profit</string>
    <string name="year">Year</string>
    <string name="chart_desc">The company performance chart</string>
    <string name="about_asset_management_firms">About asset management firms</string>
    <string name="what_are_asset_management_firms">What are asset management firms ?</string>
    <string name="simply_put_asset_management_firms_manage_funds_for_individuals_and_companies_they_make_well_timed_investment_decisions_on_behalf_of_their_clients_to_grow_their_finances_and_portfolio_working_with_a_group_of_several_investors_asset_management_firms_are_able_to_diversify_their_clients_portfolios_this_gives_them_access_to_higher_value_options_with_better_capital_appreciation_prospects_as_well_as_mitigating_the_associated_risk_these_pooled_funds_can_be_channelled_into_property_shares_bonds_or_other_assets_depending_on_the_financial_objectives_of_their_clients_for_example_the_stock_market_can_deliver_fast_returns_whereas_property_is_ideal_for_long_term_asset_management">Simply put, asset management firms manage funds for individuals and companies. They make well-timed investment decisions on behalf of their clients to grow their finances and portfolio. Working with a group of several investors, asset management firms are able to diversify their clients’ portfolios. This gives them access to higher value options with better capital appreciation prospects, as well as mitigating the associated risk. These pooled funds can be channelled into property, shares, bonds or other assets depending on the financial objectives of their clients. For example, the stock market can deliver fast returns, whereas property is ideal for long-term asset management.</string>
    <string name="how_do_investment_management_firms_make_money">How do investment management firms make money?</string>
    <string name="the_more_profit_they_make_for_their_clients_the_more_money_investment_management_firms_make_they_charge_their_clients_a_management_fee_and_take_a_percentage_of_the_profits_from_the_investments">The more profit they make for their clients, the more money investment management firms make. They charge their clients a management fee and take a percentage of the profits from the investments.</string>
    <string name="search_hint">Search the company name...</string>
    <string name="search_title">Search</string>
    <string name="yourInvestment">Your investment:\u00A0</string>
    <string name="profit">Profit*:\u00A0</string>
    <string name="about_us">About us  </string>
    <string name="the_caffeine_coders_team">The Caffeine coders team</string>
    <string name="dima_alissa">Dima Alissa</string>
    <string name="hossin_algerf">Hossin Algerf</string>
    <string name="radhika_jayaraman">Radhika Jayaraman</string>
    <string name="tamer_alnoami">Tamer Alnoami</string>
    <string name="chen_zhi">Chen Zhi</string>
    <string name="adem_sezer">Adem Sezer</string>

    <string-array name="spinner_content">
        <item>1</item>
        <item>3</item>
        <item>5</item>
    </string-array>


</resources>
